[gd_scene load_steps=13 format=3 uid="uid://kxwk2nihdfv8"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_27sve"]
[ext_resource type="Script" path="res://scripts/voxelsprite.gd" id="2_3hh7i"]
[ext_resource type="Texture2D" uid="uid://cqjpiiatn5fdk" path="res://resources/spritesheet.png" id="3_sdlpt"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_oidfa"]
sky_top_color = Color(0, 0, 0, 1)
sky_horizon_color = Color(0, 0, 0, 1)
ground_bottom_color = Color(0, 0, 0, 1)
ground_horizon_color = Color(0, 0, 0, 1)

[sub_resource type="Sky" id="Sky_heqdc"]
sky_material = SubResource("ProceduralSkyMaterial_oidfa")

[sub_resource type="Environment" id="Environment_xl6tq"]
background_mode = 2
sky = SubResource("Sky_heqdc")

[sub_resource type="Animation" id="Animation_bxl3b"]
resource_name = "Attack"
length = 1.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:anim_frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25]
}

[sub_resource type="Animation" id="Animation_8mick"]
resource_name = "Die"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:anim_frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36]
}

[sub_resource type="Animation" id="Animation_e3684"]
resource_name = "Idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:anim_frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_s306h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:anim_frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_d7tuj"]
resource_name = "Run"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:anim_frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fylyl"]
_data = {
"Attack": SubResource("Animation_bxl3b"),
"Die": SubResource("Animation_8mick"),
"Idle": SubResource("Animation_e3684"),
"RESET": SubResource("Animation_s306h"),
"Run": SubResource("Animation_d7tuj")
}

[node name="Main" type="Node3D"]
script = ExtResource("1_27sve")

[node name="Marker3D" type="Marker3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Marker3D"]
transform = Transform3D(1, 0, 0, 0, 0.971751, 0.236007, 0, -0.236007, 0.971751, 0, 0.88732, 4.87786)
size = 54.658

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_xl6tq")

[node name="OmniLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.909679, 0.415313, 0, -0.415313, 0.909679, 0.0877719, 1.53616, 2.15133)
sky_mode = 1

[node name="Pivot" type="Marker3D" parent="."]

[node name="VoxelSprite" type="Node3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -0.651482, 0)
script = ExtResource("2_3hh7i")
spritesheet = ExtResource("3_sdlpt")
default_animation = &"Idle"
h_frames = 6
v_frames = 17
voxel_size = Vector3(0.1, 0.1, 0.2)

[node name="Voxels" type="Node3D" parent="Pivot/VoxelSprite"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pivot/VoxelSprite"]
libraries = {
"": SubResource("AnimationLibrary_fylyl")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 133.0
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HUD/MarginContainer"]
layout_mode = 2

[node name="NextAnim" type="Button" parent="CanvasLayer/HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Next animation"

[node name="PrevAnim" type="Button" parent="CanvasLayer/HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Prev. animation"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="FPSDown" type="Button" parent="CanvasLayer/HUD/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "-"

[node name="Label" type="Label" parent="CanvasLayer/HUD/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "FPS"
horizontal_alignment = 1

[node name="FPSUp" type="Button" parent="CanvasLayer/HUD/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "+"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/HUD/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RotateSlower" type="Button" parent="CanvasLayer/HUD/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "-"

[node name="Label" type="Label" parent="CanvasLayer/HUD/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Rotation Speed"

[node name="RotateFaster" type="Button" parent="CanvasLayer/HUD/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "+"

[node name="Label" type="Label" parent="CanvasLayer/HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Voxel Size"
horizontal_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/HUD/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/HUD/MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "X"
vertical_alignment = 1

[node name="XSlider" type="HSlider" parent="CanvasLayer/HUD/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.1
max_value = 0.5
step = 0.1
value = 0.1

[node name="HBoxContainer4" type="HBoxContainer" parent="CanvasLayer/HUD/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/HUD/MarginContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Y"
vertical_alignment = 1

[node name="YSlider" type="HSlider" parent="CanvasLayer/HUD/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.1
max_value = 0.5
step = 0.1
value = 0.1

[node name="HBoxContainer5" type="HBoxContainer" parent="CanvasLayer/HUD/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/HUD/MarginContainer/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Z"
vertical_alignment = 1

[node name="ZSlider" type="HSlider" parent="CanvasLayer/HUD/MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.1
max_value = 0.5
step = 0.1
value = 0.1

[connection signal="pressed" from="CanvasLayer/HUD/MarginContainer/VBoxContainer/NextAnim" to="." method="_on_next_anim_pressed"]
[connection signal="pressed" from="CanvasLayer/HUD/MarginContainer/VBoxContainer/PrevAnim" to="." method="_on_prev_anim_pressed"]
[connection signal="pressed" from="CanvasLayer/HUD/MarginContainer/VBoxContainer/HBoxContainer/FPSDown" to="." method="_on_fps_down_pressed"]
[connection signal="pressed" from="CanvasLayer/HUD/MarginContainer/VBoxContainer/HBoxContainer/FPSUp" to="." method="_on_fps_up_pressed"]
[connection signal="pressed" from="CanvasLayer/HUD/MarginContainer/VBoxContainer/HBoxContainer2/RotateSlower" to="." method="_on_rotate_slower_pressed"]
[connection signal="pressed" from="CanvasLayer/HUD/MarginContainer/VBoxContainer/HBoxContainer2/RotateFaster" to="." method="_on_rotate_faster_pressed"]
[connection signal="value_changed" from="CanvasLayer/HUD/MarginContainer/VBoxContainer/HBoxContainer3/XSlider" to="." method="_on_x_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/HUD/MarginContainer/VBoxContainer/HBoxContainer4/YSlider" to="." method="_on_y_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/HUD/MarginContainer/VBoxContainer/HBoxContainer5/ZSlider" to="." method="_on_z_slider_value_changed"]
